PATCH: Fix table overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,19 @@ body {
   margin: 0;
   font-family: 'Noto Sans', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #585858;
+  border: 5px solid transparent;
+  border-radius: 20px;
+  background-clip: content-box;
+  opacity: 0;
+}
+
+body::-webkit-scrollbar-track {
+  background: #3b3b3b;
+}
